--- a/src/css/app.css
+++ b/src/css/app.css
@@ -5,6 +5,7 @@
 @import 'recipe.css';
 @import 'ingredient-list.css';
 @import 'recipe-edit.css';
+@import 'search-box.css';
 *, *::before, *::after {
     font-family: 'Arial Narrow', Arial, sans-serif;
     box-sizing: border-box;
